// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Component should render with avatar image 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "borderRadius": 64,
      },
      undefined,
    ]
  }
>
  <ImageBackground
    onLoadEnd={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://i.pravatar.cc/50",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#BCBEC1",
        "borderRadius": 64,
        "height": 32,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 32,
      }
    }
  />
</View>
`;

exports[`Avatar Component should render with avatar image 2`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "borderRadius": 64,
      },
      undefined,
    ]
  }
>
  <ImageBackground
    onLoadEnd={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://i.pravatar.cc/50",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#BCBEC1",
        "borderRadius": 64,
        "height": 32,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 32,
      }
    }
  />
</View>
`;

exports[`Avatar Component should render with bordered prop 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#BCBEC1",
        "borderWidth": 1,
      },
      Object {
        "borderRadius": 64,
      },
      undefined,
    ]
  }
>
  <ImageBackground
    onLoadEnd={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://i.pravatar.cc/50",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#BCBEC1",
        "borderRadius": 64,
        "height": 32,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 32,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#fff"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,.5)",
          "height": "100%",
          "position": "absolute",
          "width": "100%",
        }
      }
    />
  </ImageBackground>
</View>
`;

exports[`Avatar Component should render with bordered prop 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#c8bdf7",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {
        "borderColor": "#BCBEC1",
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0,0,0,.6)",
        "fontSize": 200,
        "paddingHorizontal": 4.571428571428571,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    M
    Ö
  </Text>
</View>
`;

exports[`Avatar Component should render with circular is false 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "borderRadius": undefined,
      },
      undefined,
    ]
  }
>
  <ImageBackground
    onLoadEnd={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://i.pravatar.cc/50",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#BCBEC1",
        "borderRadius": undefined,
        "height": 32,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 32,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#fff"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,.5)",
          "height": "100%",
          "position": "absolute",
          "width": "100%",
        }
      }
    />
  </ImageBackground>
</View>
`;

exports[`Avatar Component should render with icon 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#b1b1b1",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {},
    ]
  }
>
  <Icon
    0="u"
    1="s"
    2="e"
    3="r"
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "#fff",
        "fontSize": 18.285714285714285,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  />
</View>
`;

exports[`Avatar Component should render with onPress in Icon avatar 1`] = `
<ForwardRef
  onPress={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#b1b1b1",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {},
    ]
  }
>
  <Icon
    0="u"
    1="s"
    2="e"
    3="r"
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "#fff",
        "fontSize": 18.285714285714285,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  />
</ForwardRef>
`;

exports[`Avatar Component should render with onPress in image avatar 1`] = `
<ForwardRef
  onPress={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  style={
    Array [
      Object {},
      Object {
        "borderRadius": 64,
      },
      undefined,
    ]
  }
>
  <ImageBackground
    onLoadEnd={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://i.pravatar.cc/50",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#BCBEC1",
        "borderRadius": 64,
        "height": 32,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 32,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#fff"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,.5)",
          "height": "100%",
          "position": "absolute",
          "width": "100%",
        }
      }
    />
  </ImageBackground>
</ForwardRef>
`;

exports[`Avatar Component should render with onPress in title avatar 1`] = `
<ForwardRef
  onPress={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#c8bdf7",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {},
    ]
  }
>
  <Text
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0,0,0,.6)",
        "fontSize": 200,
        "paddingHorizontal": 4.571428571428571,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    M
    Ö
  </Text>
</ForwardRef>
`;

exports[`Avatar Component should render with raised prop 1`] = `
<View
  style={
    Array [
      Object {
        "shadowColor": "rgba(0,0,0,.5)",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 2,
      },
      Object {
        "borderRadius": 64,
      },
      undefined,
    ]
  }
>
  <ImageBackground
    onLoadEnd={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://i.pravatar.cc/50",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#BCBEC1",
        "borderRadius": 64,
        "height": 32,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 32,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#fff"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,.5)",
          "height": "100%",
          "position": "absolute",
          "width": "100%",
        }
      }
    />
  </ImageBackground>
</View>
`;

exports[`Avatar Component should render with raised prop 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#c8bdf7",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {
        "shadowColor": "rgba(0,0,0,.5)",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.5,
        "shadowRadius": 2,
      },
    ]
  }
>
  <Text
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0,0,0,.6)",
        "fontSize": 200,
        "paddingHorizontal": 4.571428571428571,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    M
    Ö
  </Text>
</View>
`;

exports[`Avatar Component should render with randomColor is false 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#b1b1b1",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {},
    ]
  }
>
  <Text
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "#fff",
        "fontSize": 200,
        "paddingHorizontal": 4.571428571428571,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    M
    Ö
  </Text>
</View>
`;

exports[`Avatar Component should render with rounded prop 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "borderRadius": 5,
      },
      undefined,
    ]
  }
>
  <ImageBackground
    onLoadEnd={[Function]}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://i.pravatar.cc/50",
      }
    }
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#BCBEC1",
        "borderRadius": 5,
        "height": 32,
        "justifyContent": "center",
        "overflow": "hidden",
        "width": 32,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#fff"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,.5)",
          "height": "100%",
          "position": "absolute",
          "width": "100%",
        }
      }
    />
  </ImageBackground>
</View>
`;

exports[`Avatar Component should render with rounded prop 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#c8bdf7",
        "borderRadius": 5,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {},
    ]
  }
>
  <Text
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0,0,0,.6)",
        "fontSize": 200,
        "paddingHorizontal": 4.571428571428571,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    M
    Ö
  </Text>
</View>
`;

exports[`Avatar Component should render with shortestTitle is false 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#c8bdf7",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {},
    ]
  }
>
  <Text
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0,0,0,.6)",
        "fontSize": 200,
        "paddingHorizontal": 4.571428571428571,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    Murat ÖNER
  </Text>
</View>
`;

exports[`Avatar Component should render with shortestTitle is false 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#c8bdf7",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {},
    ]
  }
>
  <Text
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0,0,0,.6)",
        "fontSize": 200,
        "paddingHorizontal": 4.571428571428571,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    Murat ÖNER
  </Text>
</View>
`;

exports[`Avatar Component should render with textAutoColorMode is auto-light 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#c8bdf7",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {},
    ]
  }
>
  <Text
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0,0,0,.6)",
        "fontSize": 200,
        "paddingHorizontal": 4.571428571428571,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    M
    Ö
  </Text>
</View>
`;

exports[`Avatar Component should render with textColorMode is light 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#c8bdf7",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {},
    ]
  }
>
  <Text
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 200,
        "paddingHorizontal": 4.571428571428571,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    M
    Ö
  </Text>
</View>
`;

exports[`Avatar Component should render with title 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#c8bdf7",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {},
    ]
  }
>
  <Text
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(0,0,0,.6)",
        "fontSize": 200,
        "paddingHorizontal": 4.571428571428571,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    M
    Ö
  </Text>
</View>
`;

exports[`Avatar Component should render with titleShowLimit is 2 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#4e2b75",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {},
    ]
  }
>
  <Text
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "#fff",
        "fontSize": 200,
        "paddingHorizontal": 4.571428571428571,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    M
    S
  </Text>
</View>
`;

exports[`Avatar Component should render without issues 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#000000",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "width": 32,
      },
      Object {},
    ]
  }
>
  <Text
    adjustsFontSizeToFit={true}
    minimumFontScale={0.01}
    numberOfLines={1}
    style={
      Object {
        "color": "#fff",
        "fontSize": 200,
        "paddingHorizontal": 4.571428571428571,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  />
</View>
`;
